ボードの初期表示
８x8のマスの中央に黒と白の丸を描画。

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "elemental": "^0.6.1",
     "material-ui": "^0.20.0",
+    "prop-types": "^15.6.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
-    "redux": "^3.7.2",
-    "prop-types": "16.6.1"
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
